--- a/_includes/head-custom.html
+++ b/_includes/head-custom.html
@@ -6,4 +6,7 @@
 <!-- You can set your favicon here -->
 <!-- link rel="shortcut icon" type="image/x-icon" href="{{ '/favicon.ico' | relative_url }}" -->
 
+<!-- Set favicon using an image link -->
+<link rel="shortcut icon" type="image/png" href="assets\img\header_icon.png">
+
 <!-- end custom head snippets -->
