--- a/_includes/head-custom.html
+++ b/_includes/head-custom.html
@@ -7,7 +7,7 @@
 <!-- link rel="shortcut icon" type="image/x-icon" href="{{ '/favicon.ico' | relative_url }}" -->
 
 <!-- Set favicon using an image link -->
-<link rel="shortcut icon" type="image/png" href="/assets/img/header_icon.png">
+<link rel="shortcut icon" type="image/x-icon" href="/assets/img/lego-figure-head-smile-toy_108508.ico">
 
 
 <!-- end custom head snippets -->
